# whenever_time_period

./: .gitignore  README.md  pyproject.toml
src/tests/: conftest.py  generators.py  test_time_period.py  utils.py
src/whenever_time_period/: abstract.py  infinite.py  linear.py  modular.py  time_period.py
